feat(Module-2): added complete dual database access layer with DTO mapping, adapters and environment profiles
Details:
• Added Postgres entity models: Customer, Policy, Agent
• Configured Spring Data JPA repositories for each entity
• Simulated legacy Cassandra database using a JSON data source
• Implemented LegacyRepositories to load and parse legacy JSON records
• Created DTOs for Customer, Policy and Agent including request variants
• Added RepositoryAdapter classes to unify reads from both Postgres and Legacy
• Implemented DTO converters inside adapters for consistent transformation
• Added application-dev.properties and application-prod.properties for environment separation
• Enabled SLF4J + Logback for enterprise logging with structured log pattern
• Ensured all dual-read operations return merged lists of Postgres + legacy data
• Verified Module-2 end-to-end working (entities → legacy read → adapter → DTO response)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.application.name=data-modernization-platform
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/datamod
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 server.port=8080
 
 
+spring.profiles.active=dev
